Bug #47492
tools/osdmaptool.cc: fix inaccurate pg map result when simulating osd out
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Correctness/Safety
Target version:
-
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
When simulating osd out, it will always adjust this osd's crush weight to 1.0. Hence the pg map result is not same as the real cluster or simulated by crushtool.
History
#1 Updated by Zhi Zhang about 3 years ago
- Pull request ID set to 37185
#2 Updated by Neha Ojha about 3 years ago
- Status changed from New to Fix Under Review
#3 Updated by Kefu Chai about 3 years ago
- Status changed from Fix Under Review to Resolved