tools/osdmaptool.cc: fix inaccurate pg map result when simulating osd out

When simulating osd out, it will always adjust this osd's crush weight
to 1.0. Hence the pg map result is not same as the real cluster or simulated
by crushtool.

Fixes: https://tracker.ceph.com/issues/47492

Signed-off-by: Zhi Zhang <zhangz.david@outlook.com>